--- a/frontend/app/templates/inicio.html
+++ b/frontend/app/templates/inicio.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
-    <title>Temperaturas</title>
+    <title>Temperaturas V2</title>
   </head>
   <body>
     <div id="header">
